    TODO:  AuthorizationExecuteWithPrivileges() used by admin privileged exec, is deprecated in 10.8 Mountain Lion. New method involves using a helper tool.  Also, take a look at the sandbox thing.
    TODO:  Support for creating bundle with JUST executable script, no app binary wrapper.  May not be possible on Mountain Lion.
    TODO:  Create TextMate plugin

For 4.8
    TODO:  Fix temp icon path issue for icons dynamically generated from imported image, make it cleaner
    TODO:  Prompt for file with open dialog on launch, in ScripExec, set in Drop Settings
    TODO:  Make provide as service not enabled by default, make fields go enabled/disabled based on checkboxes in drop settings
    TODO:  Make uninstaller more clean
    TODO:  Restore "icon from image" functionality in command line tool (window server dependency?)
    TODO:  Rewrite or at least refactor nasty old code in STFileList and derivatives
    TODO:  Remove all support for file types.  They are ancient crust now ignored by Mac OS X and should no longer be used.
    TODO:  Update so that app and generated apps have NSHumanReadableCopyright defined, otherwise no version info in Get Info on Snow Lopeard or later (http://lists.apple.com/archives/cocoa-dev/2009/Sep/msg01710.html)

For 4.7
    * New "Uninstall" menu option, which removes all traces of Platypus on a system
    * New update mechanism using the Sparkle framework and appcasting
    * Command line tool now supports reading script from STDIN
    * Command line tool now supports XML plist option 
    * Migrated away from all deprecated Mac OS X API calls
    * Minor interface tweaks
    * Fixed bug where script permissions could be erroneously set, resulting in execution failure
    * Fixed bug which caused Platypus to crash when creating Droplets
    * Fixed bug with icon missing on "New Script" if CLI tool wasn't installed
    * Fixed bug with enabled empty menu item when no profiles were in Profiles list

For 4.6